[package]
name = "social-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "social-service"
path = "src/main.rs"

[lib]
name = "social_service"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# Web & gRPC
actix-web.workspace = true
actix-rt.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic-health.workspace = true
pbjson-types = "0.7"

# Database
sqlx.workspace = true
redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Events
rdkafka.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# TLS/Crypto
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Shared libs
transactional-outbox = { path = "../libs/transactional-outbox" }
idempotent-consumer = { path = "../libs/idempotent-consumer" }
cache-invalidation = { path = "../libs/cache-invalidation" }
grpc-tls = { path = "../libs/grpc-tls" }
resilience = { path = "../libs/resilience" }
error-types = { path = "../libs/error-types" }
db-pool = { path = "../libs/db-pool" }
grpc-clients = { path = "../libs/grpc-clients" }

[build-dependencies]
tonic-build = "0.12"
