[package]
name = "streaming-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "streaming-service"
path = "src/main.rs"

[lib]
name = "streaming_service"
path = "src/lib.rs"

[dependencies]
actix-web.workspace = true
actix-rt.workspace = true
actix-ws = "0.2"
actix-web-actors = "4.3"
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
prometheus.workspace = true
once_cell = "1.19"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

# Streaming-specific
futures = "0.3"
bytes = "1.5"
rdkafka.workspace = true
clickhouse.workspace = true
actix = "0.13"

# gRPC
tonic.workspace = true
prost.workspace = true

# Shared libraries
error-types = { path = "../libs/error-types" }
error-handling = { path = "../libs/error-handling" }
db-pool = { path = "../libs/db-pool" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
