[package]
name = "user-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "user-service"
path = "src/main.rs"

# [[bin]]
# name = "job_worker"
# path = "src/bin/job_worker.rs"
# TODO: Uncomment when job_worker.rs is implemented

[lib]
name = "user_service"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
thiserror.workspace = true
anyhow.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
validator.workspace = true
lettre.workspace = true
governor.workspace = true
prometheus.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
mime.workspace = true
base64.workspace = true
rdkafka.workspace = true
async-trait.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
clickhouse.workspace = true
hmac.workspace = true
qrcode.workspace = true

# Service-specific dependencies
futures = "0.3"
lazy_static = "1.4"
image = "0.24"
num_cpus = "1.16"

# Phase 4: Video Processing
tonic = "0.10"
prost = "0.12"
ndarray = "0.15"
http = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
actix-http = "3.9"
tempfile = "3.8"

[[test]]
name = "posts_test"
path = "tests/posts_test.rs"

[[test]]
name = "oauth_test"
path = "tests/oauth_test.rs"

[[test]]
name = "oauth_token_verification_test"
path = "tests/oauth_token_verification_test.rs"

[[test]]
name = "feed_ranking_test"
path = "tests/feed_ranking_test.rs"

[[test]]
name = "job_test"
path = "tests/job_test.rs"

[[test]]
name = "security_test"
path = "tests/integration/security_test.rs"

[[test]]
name = "load_test"
path = "tests/integration/load_test.rs"

[[test]]
name = "2fa_test"
path = "tests/2fa_test.rs"

[[test]]
name = "events_integration_test"
path = "tests/integration/events_integration_test.rs"

[[test]]
name = "feed_api_integration_test"
path = "tests/integration/feed_api_integration_test.rs"

[[test]]
name = "feed_ranking_integration_test"
path = "tests/integration/feed_ranking_integration_test.rs"

[[test]]
name = "feed_ranking_performance_test"
path = "tests/performance/feed_ranking_performance_test.rs"

[[test]]
name = "events_dedup_test"
path = "tests/integration/events_dedup_test.rs"

[[test]]
name = "events_advanced_test"
path = "tests/integration/events_advanced_test.rs"

[[test]]
name = "events_load_test"
path = "tests/performance/events_load_test.rs"

# Phase 6: Video System Unit Tests (T131-T133)
[[test]]
name = "video_metadata_tests"
path = "tests/unit/video/video_metadata_tests.rs"

[[test]]
name = "video_ranking_tests"
path = "tests/unit/video/video_ranking_tests.rs"

[[test]]
name = "embedding_tests"
path = "tests/unit/video/embedding_tests.rs"

[[test]]
name = "feature_extraction_test"
path = "tests/unit/video/feature_extraction_test.rs"

# Phase 6: Video System Integration Tests (T134-T137)
[[test]]
name = "video_e2e_tests"
path = "tests/integration/video/video_e2e_tests.rs"

[[test]]
name = "video_ranking_integration_tests"
path = "tests/integration/video/video_ranking_integration_tests.rs"

[[test]]
name = "video_streaming_engagement_tests"
path = "tests/integration/video/video_streaming_engagement_tests.rs"

# Phase 6: Video System Performance Tests (T138-T141)
[[test]]
name = "video_ranking_latency_test"
path = "tests/performance/video/video_ranking_latency_test.rs"

[[test]]
name = "video_transcoding_throughput_test"
path = "tests/performance/video/video_transcoding_throughput_test.rs"

[[test]]
name = "video_model_inference_test"
path = "tests/performance/video/video_model_inference_test.rs"

[[test]]
name = "video_bitrate_switching_test"
path = "tests/performance/video/video_bitrate_switching_test.rs"
