[package]
name = "cdn-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cdn-service"
path = "src/main.rs"

[lib]
name = "cdn_service"
path = "src/lib.rs"

[dependencies]
actix-web.workspace = true
actix-rt.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
prometheus.workspace = true

# CDN-specific
futures = "0.3"
aws-sdk-s3 = "1.63"
aws-config = "1.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2.5"

# gRPC
tonic.workspace = true
prost.workspace = true
tonic-health = "0.10"

# Shared libraries
error-types = { path = "../libs/error-types" }
db-pool = { path = "../libs/db-pool" }
grpc-metrics = { path = "../libs/grpc-metrics" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
