[package]
name = "video-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-service"
path = "src/main.rs"

[lib]
name = "video_service"
path = "src/lib.rs"

[dependencies]
actix-web.workspace = true
actix-rt.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
envy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
prometheus.workspace = true

# Video-specific
futures = "0.3"
actix-multipart = "0.4"
bytes = "1.5"
rdkafka.workspace = true
clickhouse.workspace = true

# AWS S3
aws-config = "1.1"
aws-sdk-s3 = "1.11"
sha2 = "0.10"
hex = "0.4"

# gRPC
tonic.workspace = true
prost.workspace = true

# Shared libraries
error-types = { path = "../libs/error-types" }
db-pool = { path = "../libs/db-pool" }
error-handling = { path = "../libs/error-handling" }
video-core = { path = "../libs/video-core" }
db-pool = { path = "../libs/db-pool" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
