[package]
name = "config-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration management
config = { version = "0.14", features = ["toml", "yaml", "json"] }
dotenv = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
error-types = { path = "../error-types" }
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["macros", "rt", "sync"] }

# Tracing
tracing = "0.2"

# Secret management
secrecy = { version = "0.10", features = ["serde"] }

# URL handling
url = { version = "2.5", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.12"
tokio = { version = "1.40", features = ["full"] }